// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-graph-editor/ScrollGraph with default scales 1`] = `
.emotion-0 {
  width: 100%;
  height: 100%;
}

<ScrollView
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <StyledGraphContainer
    className="emotion-0"
    lines={
      Array [
        Object {
          "label": "fontSize",
          "points": Array [
            Array [
              320,
              12,
            ],
            Array [
              540,
              16,
            ],
            Array [
              1280,
              24,
            ],
          ],
        },
        Object {
          "label": "width",
          "points": Array [
            Array [
              320,
              320,
            ],
            Array [
              540,
              480,
            ],
            Array [
              1280,
              1160,
            ],
          ],
        },
        Object {
          "label": "height",
          "points": Array [
            Array [
              320,
              320,
            ],
            Array [
              540,
              405,
            ],
            Array [
              1280,
              652.5,
            ],
          ],
        },
      ]
    }
  />
  <HorizontalRange
    max={10}
    min={1}
    type="range"
    value={1}
  />
  <VerticalRange
    max={10}
    min={1}
    type="range"
    value={1}
  />
</ScrollView>
`;

exports[`react-graph-editor/ScrollGraph with scaleX = 2 1`] = `
.emotion-0 {
  width: 200%;
  height: 100%;
}

<ScrollView
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <StyledGraphContainer
    className="emotion-0"
    lines={
      Array [
        Object {
          "label": "fontSize",
          "points": Array [
            Array [
              320,
              12,
            ],
            Array [
              540,
              16,
            ],
            Array [
              1280,
              24,
            ],
          ],
        },
        Object {
          "label": "width",
          "points": Array [
            Array [
              320,
              320,
            ],
            Array [
              540,
              480,
            ],
            Array [
              1280,
              1160,
            ],
          ],
        },
        Object {
          "label": "height",
          "points": Array [
            Array [
              320,
              320,
            ],
            Array [
              540,
              405,
            ],
            Array [
              1280,
              652.5,
            ],
          ],
        },
      ]
    }
  />
  <HorizontalRange
    max={10}
    min={1}
    type="range"
    value={2}
  />
  <VerticalRange
    max={10}
    min={1}
    type="range"
    value={1}
  />
</ScrollView>
`;

exports[`react-graph-editor/ScrollGraph with scaleX = 10 1`] = `
.emotion-0 {
  width: 1000%;
  height: 100%;
}

<ScrollView
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <StyledGraphContainer
    className="emotion-0"
    lines={
      Array [
        Object {
          "label": "fontSize",
          "points": Array [
            Array [
              320,
              12,
            ],
            Array [
              540,
              16,
            ],
            Array [
              1280,
              24,
            ],
          ],
        },
        Object {
          "label": "width",
          "points": Array [
            Array [
              320,
              320,
            ],
            Array [
              540,
              480,
            ],
            Array [
              1280,
              1160,
            ],
          ],
        },
        Object {
          "label": "height",
          "points": Array [
            Array [
              320,
              320,
            ],
            Array [
              540,
              405,
            ],
            Array [
              1280,
              652.5,
            ],
          ],
        },
      ]
    }
  />
  <HorizontalRange
    max={10}
    min={1}
    type="range"
    value={10}
  />
  <VerticalRange
    max={10}
    min={1}
    type="range"
    value={1}
  />
</ScrollView>
`;

exports[`react-graph-editor/ScrollGraph with scaleX = scaleY = 2 1`] = `
.emotion-0 {
  width: 200%;
  height: 200%;
}

<ScrollView
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <StyledGraphContainer
    className="emotion-0"
    lines={
      Array [
        Object {
          "label": "fontSize",
          "points": Array [
            Array [
              320,
              12,
            ],
            Array [
              540,
              16,
            ],
            Array [
              1280,
              24,
            ],
          ],
        },
        Object {
          "label": "width",
          "points": Array [
            Array [
              320,
              320,
            ],
            Array [
              540,
              480,
            ],
            Array [
              1280,
              1160,
            ],
          ],
        },
        Object {
          "label": "height",
          "points": Array [
            Array [
              320,
              320,
            ],
            Array [
              540,
              405,
            ],
            Array [
              1280,
              652.5,
            ],
          ],
        },
      ]
    }
  />
  <HorizontalRange
    max={10}
    min={1}
    type="range"
    value={2}
  />
  <VerticalRange
    max={10}
    min={1}
    type="range"
    value={2}
  />
</ScrollView>
`;

exports[`react-graph-editor/ScrollGraph with scaleX = scaleY = 10 1`] = `
.emotion-0 {
  width: 1000%;
  height: 1000%;
}

<ScrollView
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <StyledGraphContainer
    className="emotion-0"
    lines={
      Array [
        Object {
          "label": "fontSize",
          "points": Array [
            Array [
              320,
              12,
            ],
            Array [
              540,
              16,
            ],
            Array [
              1280,
              24,
            ],
          ],
        },
        Object {
          "label": "width",
          "points": Array [
            Array [
              320,
              320,
            ],
            Array [
              540,
              480,
            ],
            Array [
              1280,
              1160,
            ],
          ],
        },
        Object {
          "label": "height",
          "points": Array [
            Array [
              320,
              320,
            ],
            Array [
              540,
              405,
            ],
            Array [
              1280,
              652.5,
            ],
          ],
        },
      ]
    }
  />
  <HorizontalRange
    max={10}
    min={1}
    type="range"
    value={10}
  />
  <VerticalRange
    max={10}
    min={1}
    type="range"
    value={10}
  />
</ScrollView>
`;

exports[`react-graph-editor/ScrollGraph with scaleY = 2 1`] = `
.emotion-0 {
  width: 100%;
  height: 200%;
}

<ScrollView
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <StyledGraphContainer
    className="emotion-0"
    lines={
      Array [
        Object {
          "label": "fontSize",
          "points": Array [
            Array [
              320,
              12,
            ],
            Array [
              540,
              16,
            ],
            Array [
              1280,
              24,
            ],
          ],
        },
        Object {
          "label": "width",
          "points": Array [
            Array [
              320,
              320,
            ],
            Array [
              540,
              480,
            ],
            Array [
              1280,
              1160,
            ],
          ],
        },
        Object {
          "label": "height",
          "points": Array [
            Array [
              320,
              320,
            ],
            Array [
              540,
              405,
            ],
            Array [
              1280,
              652.5,
            ],
          ],
        },
      ]
    }
  />
  <HorizontalRange
    max={10}
    min={1}
    type="range"
    value={1}
  />
  <VerticalRange
    max={10}
    min={1}
    type="range"
    value={2}
  />
</ScrollView>
`;

exports[`react-graph-editor/ScrollGraph with scaleY = 10 1`] = `
.emotion-0 {
  width: 100%;
  height: 1000%;
}

<ScrollView
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <StyledGraphContainer
    className="emotion-0"
    lines={
      Array [
        Object {
          "label": "fontSize",
          "points": Array [
            Array [
              320,
              12,
            ],
            Array [
              540,
              16,
            ],
            Array [
              1280,
              24,
            ],
          ],
        },
        Object {
          "label": "width",
          "points": Array [
            Array [
              320,
              320,
            ],
            Array [
              540,
              480,
            ],
            Array [
              1280,
              1160,
            ],
          ],
        },
        Object {
          "label": "height",
          "points": Array [
            Array [
              320,
              320,
            ],
            Array [
              540,
              405,
            ],
            Array [
              1280,
              652.5,
            ],
          ],
        },
      ]
    }
  />
  <HorizontalRange
    max={10}
    min={1}
    type="range"
    value={1}
  />
  <VerticalRange
    max={10}
    min={1}
    type="range"
    value={10}
  />
</ScrollView>
`;
